--- a/sass/components/_header-contacts-list.scss
+++ b/sass/components/_header-contacts-list.scss
@@ -1,6 +1,6 @@
 .contacts-list {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     gap: 50px;
 
     &__link {
@@ -14,7 +14,7 @@
             display: flex;
             align-items: center;
             gap: 10px;
-            padding: 32px 0;
+            padding: 14px 0;
     
             transition: color $transition-dur var(--timing-function);
         }
