--- a/sass/components/_header-site-nav.scss
+++ b/sass/components/_header-site-nav.scss
@@ -13,7 +13,7 @@
         font-size: 14px;
         line-height: 1.14;
         letter-spacing: 0.02em;
-        padding: 30px 0;
+        padding: 14px 0;
 
         transition: color 250ms var(--timing-function);
     }
@@ -34,7 +34,7 @@
 
         position: absolute;
         left: 0;
-        bottom: 0;
+        bottom: -17px;
 
         display: block;
         width: 100%;
