--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -13,6 +13,7 @@
     --cards-border: #eeeeee;
     --svg-grey-color: #afb1b8;
 
+    // variables timing css
     --transition-dur: 250ms;
     --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -44,3 +45,8 @@ $primary-button-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 // variables timing scss
 $transition-dur: 250ms;
 $cubic-bezier: cubic-bezier(0.4, 0, 0.2, 1);
+
+// variables device format
+$mobile: 480px;
+$tablet: 768px;
+$desktop: 1200px;
